--- a/environment_osx.yml
+++ b/environment_osx.yml
@@ -2,146 +2,91 @@ name: ml
 channels:
   - defaults
 dependencies:
-  - blas=1.0=mkl
-  - ca-certificates=2019.10.16=0
-  - certifi=2019.9.11=py37_0
-  - intel-openmp=2019.4=233
-  - libcxx=4.0.1=hcfea43d_1
-  - libcxxabi=4.0.1=hcfea43d_1
-  - libedit=3.1.20181209=hb402a30_0
-  - libffi=3.2.1=h475c297_4
-  - libgfortran=3.0.1=h93005f0_2
-  - lightgbm=2.2.3=py37h0a44026_0
-  - llvm-openmp=4.0.1=hcfea43d_1
-  - mkl=2019.4=233
-  - mkl-service=2.3.0=py37hfbe908c_0
-  - mkl_fft=1.0.14=py37h5e564d8_0
-  - mkl_random=1.1.0=py37ha771720_0
-  - ncurses=6.1=h0a44026_1
-  - numpy-base=1.17.2=py37h6575580_0
-  - openssl=1.1.1d=h1de35cc_3
-  - pip=19.2.3=py37_0
-  - python=3.7.4=h359304d_1
-  - readline=7.0=h1de35cc_5
-  - setuptools=41.4.0=py37_0
-  - sqlite=3.30.0=ha441bb4_0
-  - tk=8.6.8=ha441bb4_0
-  - wheel=0.33.6=py37_0
-  - xz=5.2.4=h1de35cc_4
+  - ca-certificates=2020.6.24=0
+  - certifi=2020.6.20=py37_0
+  - libcxx=10.0.0=1
+  - libedit=3.1.20191231=h1de35cc_1
+  - libffi=3.3=hb1e8313_2
+  - ncurses=6.2=h0a44026_1
+  - openssl=1.1.1g=h1de35cc_0
+  - pip=20.1.1=py37_1
+  - python=3.7.7=hf48f09d_4
+  - readline=8.0=h1de35cc_0
+  - setuptools=46.0.0=py37_0
+  - sqlite=3.32.3=hffcf06c_0
+  - tk=8.6.10=hb0a8c7a_0
+  - wheel=0.34.2=py37_0
+  - xz=5.2.5=h1de35cc_0
   - zlib=1.2.11=h1de35cc_3
   - pip:
     - absl-py==0.9.0
-    - appnope==0.1.0
-    - astor==0.8.1
+    - astunparse==1.6.3
     - attrs==19.3.0
-    - backcall==0.1.0
-    - beautifulsoup4==4.8.2
-    - bleach==3.1.0
-    - boto3==1.11.6
-    - botocore==1.14.6
-    - catboost==0.16.5
+    - bcrypt==3.1.7
+    - cached-property==1.5.1
+    - cachetools==4.1.1
+    - cffi==1.14.0
     - chardet==3.0.4
-    - click==7.0
+    - click==7.1.2
+    - cryptography==2.9.2
     - cycler==0.10.0
-    - decorator==4.4.0
-    - defusedxml==0.6.0
-    - docutils==0.15.2
-    - emoji==0.5.3
-    - entrypoints==0.3
-    - flask==1.1.1
+    - distro==1.5.0
+    - docker==4.2.2
+    - docker-compose==1.26.2
+    - dockerpty==0.4.1
+    - docopt==0.6.2
     - future==0.18.2
-    - fuzzywuzzy==0.17.0
-    - gast==0.2.2
+    - gast==0.3.3
+    - google-auth==1.19.0
+    - google-auth-oauthlib==0.4.1
     - google-pasta==0.2.0
     - grpcio==1.30.0
     - h5py==2.10.0
-    - idna==2.8
-    - importlib-metadata==0.23
-    - ipykernel==5.1.3
-    - ipython==7.9.0
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.5.1
-    - itsdangerous==1.1.0
-    - jedi==0.15.1
-    - jinja2==2.10.3
-    - jmespath==0.9.4
-    - joblib==0.13.2
-    - json5==0.8.5
-    - jsonschema==3.1.1
-    - jupyter==1.0.0
-    - jupyter-client==5.3.4
-    - jupyter-console==6.0.0
-    - jupyter-core==4.6.1
-    - jupyterlab==1.2.4
-    - jupyterlab-server==1.0.6
-    - keras-applications==1.0.8
+    - idna==2.10
+    - importlib-metadata==1.7.0
+    - joblib==0.16.0
+    - jsonschema==3.2.0
     - keras-preprocessing==1.1.2
-    - kiwisolver==1.1.0
-    - llvmlite==0.30.0
+    - kiwisolver==1.2.0
     - markdown==3.2.2
-    - markupsafe==1.1.1
-    - matplotlib==3.1.1
-    - mistune==0.8.4
-    - more-itertools==7.2.0
-    - nbconvert==5.6.1
-    - nbformat==4.4.0
-    - notebook==6.0.1
-    - numba==0.45.1
-    - numpy==1.17.2
+    - matplotlib==3.2.2
+    - nltk==3.5
+    - numpy==1.19.0
+    - oauthlib==3.1.0
     - opt-einsum==3.2.1
     - pandas==1.0.5
-    - pandas-flavor==0.1.2
-    - pandocfilters==1.4.2
-    - parso==0.5.1
-    - pexpect==4.7.0
-    - pickleshare==0.7.5
-    - pillow==6.2.1
-    - plotly==4.1.1
-    - prettytable==0.7.2
-    - prometheus-client==0.7.1
-    - prompt-toolkit==2.0.10
+    - paramiko==2.7.1
     - protobuf==3.12.2
-    - ptyprocess==0.6.0
-    - pygments==2.4.2
-    - pyparsing==2.4.2
-    - pyrsistent==0.15.4
-    - python-dateutil==2.8.0
-    - python-graphviz==0.13
-    - pytz==2019.3
-    - pyyaml==5.1.2
-    - pyzmq==18.1.0
-    - qtconsole==4.5.5
-    - regex==2020.1.8
-    - requests==2.22.0
-    - retrying==1.3.3
-    - s3transfer==0.3.1
-    - sacremoses==0.0.38
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pycparser==2.20
+    - pynacl==1.4.0
+    - pyparsing==2.4.7
+    - pyrsistent==0.16.0
+    - python-dateutil==2.8.1
+    - python-dotenv==0.14.0
+    - pytz==2020.1
+    - pyyaml==5.3.1
+    - regex==2020.6.8
+    - requests==2.24.0
+    - requests-oauthlib==1.3.0
+    - rsa==4.6
     - scikit-learn==0.23.1
-    - scipy==1.3.1
+    - scipy==1.4.1
     - seaborn==0.10.1
-    - selenium==3.141.0
-    - send2trash==1.5.0
-    - sentencepiece==0.1.85
-    - six==1.12.0
-    - soupsieve==2.0
-    - tensorboard==1.15.0
-    - tensorflow==1.15.0
-    - tensorflow-estimator==1.15.1
+    - six==1.15.0
+    - tensorboard==2.2.2
+    - tensorboard-plugin-wit==1.7.0
+    - tensorflow==2.2.0
+    - tensorflow-estimator==2.2.0
     - termcolor==1.1.0
-    - terminado==0.8.2
-    - testpath==0.4.2
+    - texttable==1.6.2
     - threadpoolctl==2.1.0
-    - torch==1.5.0
-    - tornado==6.0.3
-    - tqdm==4.36.1
-    - traitlets==4.3.3
-    - transformers==2.3.0
-    - urllib3==1.25.7
-    - wcwidth==0.1.7
-    - webencodings==0.5.1
-    - werkzeug==0.16.0
-    - widgetsnbextension==3.5.1
+    - torch==1.5.1
+    - tqdm==4.47.0
+    - urllib3==1.25.9
+    - websocket-client==0.57.0
+    - werkzeug==1.0.1
     - wrapt==1.12.1
-    - xgboost==0.90
-    - zipp==0.6.0
+    - zipp==3.1.0
 
